566 ==> 400712 - File modification timestamp is updated when images are moved to collection on removable media.
567 ==> 394214 - Import .mp4 files does not preserve file mtime as date stamp.
568 ==> 400762 - Trash - "Delete All Permanently" button not visible.
569 ==> 400792 - Failure to export to JPEG 2000.
570 ==> 400777 - Group images by timelapse / burst [patch].
571 ==> 400902 - NAS Mysql cannot connect with instructions given by Dmitry Popov.
572 ==> 400918 - Tags are erroneously copied to untagged images in a selection when new tag added.
573 ==> 375197 - It is possible to rotate video thumbnails (but the video isn't rotated).
574 ==> 334678 - Thumbnails fail to generate for certain AVI files - infinite loop.
575 ==> 400917 - Rotation of picture in Preview mode: thumbnail not rotated.
576 ==> 400960 - Do not reset horizontal scroll bar slider position when selecting album.
577 ==> 400766 - Export to Onedrive: not possible to export into subfolder.
578 ==> 398207 - box.com video upload fails despite successful authentication.
579 ==> 401160 - Build against lensfun-devel.
580 ==> 401173 - Wish for file saving: set changed datetime to exif datetime.
581 ==> 401423 - Video sidecar files nor read or written.
582 ==> 401438 - Calendar plugin prints improper month names (Czech localization).
583 ==> 401515 - Export to OneDrive: created subfolders not correctly managed.
584 ==> 401516 - Export to (Onedrive, Dropbox ...): list of subfolders not correctly displayed (problems if several subfolders have the same name).
585 ==> 401645 - Digikam crashes on possibly damaged video-file.
586 ==> 401676 - BQM resize tool : allow to resize by percentage (%).
587 ==> 401709 - Double clicking a name in a face-frame closes image preview.
588 ==> 401811 - DB migration (SQLite -> MySQL) fails if images are in trash.
589 ==> 401767 - digikam unable to find existing path.
590 ==> 215486 - Collection not found in location on disk with UUID (LVM volume).
591 ==> 