@@ -658,4 +658,5 @@ BUGFIXES:
 588 ==> 401811 - DB migration (SQLite -> MySQL) fails if images are in trash.
 589 ==> 401767 - digikam unable to find existing path.
 590 ==> 215486 - Collection not found in location on disk with UUID (LVM volume).
-591 ==> 
+591 ==> 401834 - The "Scanning Faces" dialog box is too large and can't be resized in french language.
+592 ==> 
